Fix dark mode calendar leave view

--- a/static/src/scss/custom_styles.scss
+++ b/static/src/scss/custom_styles.scss
@@ -61,11 +61,23 @@ body.knk_night_mode .o_list_renderer .o_list_table tbody > tr > td:not(.o_list_r
 .knk_night_mode .o_timeoff_calendar {
   background-color: #242733;
 }
-.o_calendar_renderer {
+.knk_night_mode .o_calendar_renderer, .knk_night_mode .o.timeoff_dashboard {
   background-color: inherit;
 }
-.o.timeoff_dashboard {
-  background-color: inherit;
+.knk_night_mode .o_timeoff_name {
+  color: aliceblue;
+}
+// Icon color
+.o_timeoff_card .o_timeoff_duration img {
+  filter: var(--timeOffCard-icon-filter-light);
+}
+.knk_night_mode .o_timeoff_card .o_timeoff_duration img {
+  filter: var(--timeOffCard-icon-filter-dark);
+}
+// Icon Filters
+.o_timeoff_card, .o_time_off_icon_types {
+  --timeOffCard-icon-filter-dark: brightness(1.5) saturate(1.2) hue-rotate(-80deg);
+  --timeOffCard-icon-filter-light: brightness(1.1) saturate(1.8) hue-rotate(-70deg);
 }
 // Overview Calendar text
 .knk_night_mode .fc-day-grid-event .fc-content {
